// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders chip with close button 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ebebeb",
      "borderColor": "#ebebeb",
      "borderRadius": 16,
      "borderStyle": "solid",
      "borderWidth": 0.5,
      "elevation": 0,
      "flexDirection": "column",
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": false,
        "selected": false,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "borderRadius": 16,
          },
          Object {
            "flexGrow": 1,
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexGrow": 1,
            "paddingLeft": 4,
            "position": "relative",
          },
          Object {
            "paddingRight": 32,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "padding": 4,
            },
            null,
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "rgba(0, 0, 0, 0.54)",
                "fontSize": 18,
              },
            ]
          }
        >
          □
        </Text>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
            },
            Object {
              "textAlign": "left",
            },
            Array [
              Object {
                "lineHeight": 24,
                "marginVertical": 4,
                "minHeight": 24,
                "textAlignVertical": "center",
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "System",
                "fontWeight": "400",
                "marginLeft": 4,
                "marginRight": 0,
              },
              undefined,
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": "100%",
        "justifyContent": "center",
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      accessibilityLabel="Close"
      accessibilityRole="button"
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "padding": 4,
          },
          Object {
            "marginRight": 4,
          },
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontSize": 16,
            },
          ]
        }
      >
        □
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders chip with custom close button 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ebebeb",
      "borderColor": "#ebebeb",
      "borderRadius": 16,
      "borderStyle": "solid",
      "borderWidth": 0.5,
      "elevation": 0,
      "flexDirection": "column",
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": false,
        "selected": false,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "borderRadius": 16,
          },
          Object {
            "flexGrow": 1,
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexGrow": 1,
            "paddingLeft": 4,
            "position": "relative",
          },
          Object {
            "paddingRight": 32,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "padding": 4,
            },
            null,
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "color": "rgba(0, 0, 0, 0.54)",
                "fontSize": 18,
              },
              Array [
                Object {
                  "lineHeight": 18,
                  "transform": Array [
                    Object {
                      "scaleX": 1,
                    },
                  ],
                },
                Object {
                  "backgroundColor": "transparent",
                },
              ],
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
            },
            Object {
              "textAlign": "left",
            },
            Array [
              Object {
                "lineHeight": 24,
                "marginVertical": 4,
                "minHeight": 24,
                "textAlignVertical": "center",
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "System",
                "fontWeight": "400",
                "marginLeft": 4,
                "marginRight": 0,
              },
              undefined,
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": "100%",
        "justifyContent": "center",
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      accessibilityLabel="Close"
      accessibilityRole="button"
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "padding": 4,
          },
          Object {
            "marginRight": 4,
          },
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        allowFontScaling={false}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          Array [
            Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontSize": 16,
            },
            Array [
              Object {
                "lineHeight": 16,
                "transform": Array [
                  Object {
                    "scaleX": 1,
                  },
                ],
              },
              Object {
                "backgroundColor": "transparent",
              },
            ],
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders chip with icon 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ebebeb",
      "borderColor": "#ebebeb",
      "borderRadius": 16,
      "borderStyle": "solid",
      "borderWidth": 0.5,
      "elevation": 0,
      "flexDirection": "column",
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": false,
        "selected": false,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "borderRadius": 16,
          },
          Object {
            "flexGrow": 1,
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexGrow": 1,
            "paddingLeft": 4,
            "position": "relative",
          },
          Object {
            "paddingRight": 4,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "padding": 4,
            },
            null,
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "rgba(0, 0, 0, 0.54)",
                "fontSize": 18,
              },
            ]
          }
        >
          □
        </Text>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
            },
            Object {
              "textAlign": "left",
            },
            Array [
              Object {
                "lineHeight": 24,
                "marginVertical": 4,
                "minHeight": 24,
                "textAlignVertical": "center",
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "System",
                "fontWeight": "400",
                "marginLeft": 4,
                "marginRight": 8,
              },
              undefined,
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders chip with onPress 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ebebeb",
      "borderColor": "#ebebeb",
      "borderRadius": 16,
      "borderStyle": "solid",
      "borderWidth": 0.5,
      "elevation": 0,
      "flexDirection": "column",
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": false,
        "selected": false,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "borderRadius": 16,
          },
          Object {
            "flexGrow": 1,
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexGrow": 1,
            "paddingLeft": 4,
            "position": "relative",
          },
          Object {
            "paddingRight": 4,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
            },
            Object {
              "textAlign": "left",
            },
            Array [
              Object {
                "lineHeight": 24,
                "marginVertical": 4,
                "minHeight": 24,
                "textAlignVertical": "center",
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "System",
                "fontWeight": "400",
                "marginLeft": 8,
                "marginRight": 8,
              },
              undefined,
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders outlined disabled chip 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "rgba(0, 0, 0, 0.29)",
      "borderRadius": 16,
      "borderStyle": "solid",
      "borderWidth": 0.5,
      "elevation": 0,
      "flexDirection": "column",
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": true,
        "selected": false,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "borderRadius": 16,
          },
          Object {
            "flexGrow": 1,
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexGrow": 1,
            "paddingLeft": 4,
            "position": "relative",
          },
          Object {
            "paddingRight": 4,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
            },
            Object {
              "textAlign": "left",
            },
            Array [
              Object {
                "lineHeight": 24,
                "marginVertical": 4,
                "minHeight": 24,
                "textAlignVertical": "center",
              },
              Object {
                "color": "rgba(0, 0, 0, 0.26)",
                "fontFamily": "System",
                "fontWeight": "400",
                "marginLeft": 8,
                "marginRight": 8,
              },
              undefined,
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders selected chip 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgb(188, 188, 188)",
      "borderColor": "#ebebeb",
      "borderRadius": 16,
      "borderStyle": "solid",
      "borderWidth": 0.5,
      "elevation": 0,
      "flexDirection": "column",
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": false,
        "selected": true,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "borderRadius": 16,
          },
          Object {
            "flexGrow": 1,
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexGrow": 1,
            "paddingLeft": 4,
            "position": "relative",
          },
          Object {
            "paddingRight": 4,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "padding": 4,
            },
            null,
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "rgba(0, 0, 0, 0.54)",
                "fontSize": 18,
              },
            ]
          }
        >
          □
        </Text>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "System",
              "fontWeight": "400",
            },
            Object {
              "textAlign": "left",
            },
            Array [
              Object {
                "lineHeight": 24,
                "marginVertical": 4,
                "minHeight": 24,
                "textAlignVertical": "center",
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontFamily": "System",
                "fontWeight": "400",
                "marginLeft": 4,
                "marginRight": 8,
              },
              undefined,
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
</View>
`;
